--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,5 @@
 <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/">SPA</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link active" aria-current="page" href="/"><h1 class="text-dark display-6 mx-5">RAILS SPA</h1></a>
   </li>
 </ul>
